--- a/.travis.yml
+++ b/.travis.yml
@@ -13,17 +13,10 @@ after_success:
   - docker build -t csoulioti/react-fibonacci-docker-nginx ./nginx
   - docker build -t csoulioti/react-fibonacci-docker-server ./server
   - docker build -t csoulioti/react-fibonacci-docker-worker ./worker
-    - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID"
-
-deploy:
-  provider: elasticbeanstalk
-  region: 'us-east-2'
-  app: 'react-fibonacci-docker'
-  env: 'ReactDocker-env'
-  bucket_name: 'elasticbeanstalk-us-east-2-679975177779'
-  bucket_path: 'react-fibonacci-docker'
-  on:
-    branch: master
-  access_key_id: $AWS_ACCESS_KEY
-  secret_access_key:
-    secure: '$AWS_SECRET_KEY'
+  # Log in to the docker cli
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  # Take those images and push then to docker hub
+  - docker push csoulioti/react-fibonacci-docker-client
+  - docker push csoulioti/react-fibonacci-docker-nginx
+  - docker push csoulioti/react-fibonacci-docker-server
+  - docker push csoulioti/react-fibonacci-docker-worker
